--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ table, th, td {
   </tr>
   <tr>
     <td>
-      <img src="Xzc1Mw3.gif" height="70px">
+      <img src="http://i.imgur.com/5KkedOh.gif" height="70px">
 
     </td>
     <td rowspan="2">
