--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ table, th, td {
   </tr>
   <tr>
     <td>
-      <img src="http://i.imgur.com/5KkedOh.gif" height="70px">
-
+     <h1>HELLO</h1>
     </td>
     <td rowspan="2">
       <marquee direction="left" behavior="alternate">
