--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ table, th, td {
   </tr>
   <tr>
     <td>
-     <h1>HELLO</h1>
+          <img src="http://i.imgur.com/5KkedOh.gif" height="70px">
+
     </td>
     <td rowspan="2">
       <marquee direction="left" behavior="alternate">
